# patent-scout

./: .env.example  .gitignore  .sentryclirc.example  DATABASE_SCHEMA.md  Dockerfile  LICENSE  LICENSE.md  README.md  add_canon_name.py  alembic.ini  alerts_runner.py  app.py  backfill_assignee_names.py  copilot-instructions-python.md  etl.py  etl_add_embeddings.py  etl_patents_neon.py  etl_patentsview.py  etl_uspto.py  etl_xml_fulltext.py  generate_citations_csv.py  independent_claims_embeddings.py  instrumentation-client.ts  migrate_staged_patents.py  next.config.js  package-lock.json  package.json  process_patent_citations.py  pyproject.toml  requirements.in  requirements.txt  sentry.edge.config.ts  sentry.server.config.ts  start.sh  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  update_stripe_prices.py
.github/workflows/: alerts.yml  etl_weekly.yml
app/: api.py  auth.py  config.py  db.py  db_errors.py  embed.py  globals.css  instrumentation.ts  layout.tsx  observability.py  overview_api.py  overview_signals.py  page.tsx  payment_api.py  providers.tsx  repository.py  robots.ts  schemas.py  sitemap.ts  stripe_config.py  stripe_webhooks.py  subscription_middleware.py  whitespace_api.py  whitespace_signals.py
app/api/export/: route.ts
app/billing/: page.tsx
app/docs/: head.tsx  page.tsx
app/glitchtip-example-page/: page.tsx
app/help/: head.tsx  page.tsx
app/overview/: head.tsx  page.tsx
app/scope-analysis/: page.tsx
app/sentry-example-page/: page.tsx
app/whitespace/: head.tsx  page.tsx
components/: GlitchtipInit.tsx  HomePageClient.tsx  NavBar.tsx  SentryInit.tsx  SigmaOverviewGraph.tsx  SigmaWhitespaceGraph.tsx  SubscriptionRequired.tsx
components/billing/: PricingPlans.tsx  SubscriptionStatus.tsx
docs/uspto_odp_api/: patent-data-schema.json  uspto-odp-query-on-application-number.json  uspto-odp-query.json
infrastructure/: logger.py
migrations/: env.py
public/: sitemap.xml
scripts/: add_canon_name.py  etl_uspto.py  issued_patent_checker.py  load_patent_citations.py  update_patent_staging.py
tests/: conftest.py  test_alerts_runner.py  test_api.py  test_auth.py  test_config.py  test_db.py  test_embed.py  test_overview_signals.py  test_overview_utils.py  test_repository.py  test_subscription_middleware.py  test_whitespace_signals.py  test_whitespace_utils.py
types/: ambient.d.ts
(+31 files in other folders)
