[project]
name = "patent-scout-api"
version = "0.1.0"
description = "Patent Scout FastAPI search service"
requires-python = ">=3.11"
authors = [{name = "Phaethon Order"}]
dependencies = [
"fastapi>=0.115",
"uvicorn[standard]>=0.30",
"psycopg[binary,pool]>=3.2",
"pydantic>=2.8",
]

[project.optional-dependencies]
test = [
"pytest>=8.2",
"pytest-asyncio>=0.23",
"httpx>=0.27",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","PLC"]
ignore = ["E501"]