[build-system]
requires = ["setuptools>=80.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapseip-api"
version = "0.1.0"
description = "SynapseIP FastAPI search service"
requires-python = ">=3.13"
authors = [{name = "Phaethon Order"}]
dependencies = [
"fastapi>=0.120",
"uvicorn[standard]>=0.38",
"psycopg[binary,pool]>=3.2.11",
"pydantic>=2.12",
"httpx>=0.28",
"python-dotenv>=1.1.1",
"google-cloud-bigquery>=3.38",
"tqdm>=4.67.1",
"tenacity>=9.1.2",
"openai>=2.6.1",
"asyncpg>=0.30",
"aiosmtplib>=5.0",
"stripe>=13.0",
]

[project.optional-dependencies]
test = [
"pytest>=8.4.2",
"pytest-asyncio>=1.2",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","PLC"]
ignore = ["E501"]
